--- a/src/index.css
+++ b/src/index.css
@@ -11,3 +11,38 @@ code {
   font-family: source-code-pro, Menlo, Monaco, Consolas, 'Courier New',
     monospace;
 }
+body{
+  background-color: aquamarine;
+}
+div{
+  height: 100vh;
+}
+h1{
+  margin: 0px;
+}
+input{
+  width: 50%;
+  padding: 15px 0px;
+  text-align: center;
+  font-size: 1.4rem;
+  outline: none;
+  font-weight: bold;
+  background-color: rgba(204, 83, 251, 0.616);
+  color: white;
+  border: 1px solid rgba(161, 9, 221, 0.616);
+  border-radius: 10px;
+}
+input::placeholder{
+  color:rgba(255, 255, 255, 0.808);
+  font-weight: 100;
+}
+button{
+  padding: 10px 27px;
+  font-size: 1.5rem;
+  border: 3px solid red;
+  border-radius: 10px;
+  background-color: chocolate;
+  color: white;
+  margin-bottom: 30px;
+}
+
